# base_fastapi

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
fastapi_app/: .env.template  main.py
fastapi_app/actions/: create_supeuser.py
fastapi_app/alembic/versions/: 2025_06_04_1943-e368f22ce6ab_create_users_table.py  2025_06_04_2138-da90841c96bf_create_access_tokens_table.py
fastapi_app/api/api_v1/: __init__.py  auth.py  fastapi_users_router.py  messages.py  users.py
fastapi_app/api/dependencies/: fastapi_users_router.py  users.py
fastapi_app/api/dependencies/authentication/: __init__.py  access_tokens.py  backend.py  strategy.py  user_manager.py  users.py
fastapi_app/core/: config.py
fastapi_app/core/authentication/: user_manager.py
fastapi_app/core/models/: access_token.py  base.py  db_helper.py  user.py
fastapi_app/core/schemas/: user.py
